align buttons fixed

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ img {
     margin: 0px 10px;
     padding: 20px;
     gap: 15px;
-    justify-content: end;
+    justify-content: center;
 }
 
 .social-medias {
@@ -52,10 +52,6 @@ img {
     grid-row: 1;
     align-content: center;
     font-size: 26px;
-}
-
-.middle {
-    display: grid;
 }
 
 .top h1 {
@@ -78,11 +74,8 @@ img {
     display: flex;
     margin: 10px;
     gap: 10px;
-    justify-content: start;
-}
-
-.buttons button {
-    border:#3D4435
+    justify-content: center;
+    padding: 20px;
 }
 
 .buttons {
@@ -94,11 +87,13 @@ img {
 .login-button {
     background-color: #3D4435;
     color: #C2C8CC;
+    border: #3D4435;
     padding: 10px;
 }
 
 .workwm {
     background-color: #C2C8CC;
+    border: #3D4435;
     padding: 10px;
 }
 
@@ -134,10 +129,6 @@ img {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 1fr 1fr;
         text-align: center;
-    }
-
-    .middle {
-        grid-row: 1;
     }
 
     .buttons {
